[gd_scene load_steps=8 format=3 uid="uid://h7bkvlpybu50"]

[ext_resource type="Script" uid="uid://dekhn1veecq4e" path="res://scenes/menus/scripts/level_complete_menu.gd" id="1_mh3yv"]
[ext_resource type="Shader" uid="uid://dvay6elrsfoe5" path="res://assets/shaders/scrollingBG.gdshader" id="1_sa7od"]
[ext_resource type="Texture2D" uid="uid://w23xxbihkix8" path="res://assets/mainMenuBackground.png" id="2_nbmxe"]
[ext_resource type="FontFile" uid="uid://c6o2q18e80rdv" path="res://assets/FugazOne-Regular.ttf" id="3_scoj3"]
[ext_resource type="PackedScene" uid="uid://6ao3xt3b6vd1" path="res://scenes/menus/menu_button.tscn" id="4_k0d5b"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tc31q"]
shader = ExtResource("1_sa7od")
shader_parameter/speedX = 0.0
shader_parameter/speedY = -0.025

[sub_resource type="LabelSettings" id="LabelSettings_gbc3r"]
font = ExtResource("3_scoj3")
font_size = 166
font_color = Color(0.862854, 0.751033, 0.386998, 1)

[node name="LevelCompleteMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mh3yv")

[node name="Background" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_tc31q")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -420.0
offset_bottom = 420.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nbmxe")

[node name="InnerMargins" type="MarginContainer" parent="."]
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="PanelContainer" type="VBoxContainer" parent="InnerMargins"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Title" type="Label" parent="InnerMargins/PanelContainer"]
layout_mode = 2
text = "STAGE CLEAR!"
label_settings = SubResource("LabelSettings_gbc3r")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerContainer" type="HBoxContainer" parent="InnerMargins/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 256
alignment = 1

[node name="GameTimerContainer" type="VBoxContainer" parent="InnerMargins/PanelContainer/TimerContainer"]
layout_mode = 2

[node name="GameTimerLabel" type="Label" parent="InnerMargins/PanelContainer/TimerContainer/GameTimerContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_scoj3")
theme_override_font_sizes/font_size = 56
text = "GAME TIME:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameTimer" type="Label" parent="InnerMargins/PanelContainer/TimerContainer/GameTimerContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_scoj3")
theme_override_font_sizes/font_size = 56
horizontal_alignment = 1
vertical_alignment = 1

[node name="StageTimerContainer" type="VBoxContainer" parent="InnerMargins/PanelContainer/TimerContainer"]
layout_mode = 2

[node name="StageTimerLabel" type="Label" parent="InnerMargins/PanelContainer/TimerContainer/StageTimerContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_scoj3")
theme_override_font_sizes/font_size = 56
text = "STAGE TIME:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StageTimer" type="Label" parent="InnerMargins/PanelContainer/TimerContainer/StageTimerContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_scoj3")
theme_override_font_sizes/font_size = 56
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonMargins" type="MarginContainer" parent="InnerMargins/PanelContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/margin_left = 512
theme_override_constants/margin_right = 512

[node name="ButtonContainer" type="VBoxContainer" parent="InnerMargins/PanelContainer/ButtonMargins"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="InnerMargins/PanelContainer/ButtonMargins/ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_scoj3")
theme_override_font_sizes/font_size = 56
text = "CONTINUE"

[node name="LevelSelectButton" parent="InnerMargins/PanelContainer/ButtonMargins/ButtonContainer" instance=ExtResource("4_k0d5b")]
layout_mode = 2
text = "LEVEL SELECT"

[node name="MainMenuButton" type="Button" parent="InnerMargins/PanelContainer/ButtonMargins/ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_scoj3")
theme_override_font_sizes/font_size = 56
text = "MAIN MENU"
